# uv-migrator

./: .gitignore  .goreleaser.sh  .goreleaser.yaml  .goreleaser_hook.sh  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  pyproject.toml  release-plz.toml
.github/workflows/: ci.yml  publish.yaml  publish.yml  release.yaml  release.yml
example-files/: pyproject-2.toml
python/uv_migrator/: __init__.py
src/: error.rs  lib.rs  main.rs  migrator.rs  types.rs  utils.rs
src/cli/: mod.rs
src/migrator/: dependency.rs  detect.rs  mod.rs  poetry.rs  requirements.rs
src/migrators/: common.rs  conda.rs  dependency.rs  detect.rs  mod.rs  pipenv.rs  poetry.rs  pyproject.rs  requirements.rs  setup_py.rs
src/models/: dependency.rs  mod.rs  project.rs
src/utils/: author.rs  build_system.rs  file_ops.rs  file_tracker.rs  mod.rs  pip.rs  pyproject.rs  toml.rs  update.rs  uv.rs  venv.rs  version.rs
tests/: conda_test.rs  dependency_format_test.rs  file_tracker_test.rs  pipenv_test.rs  poetry_git_deps_test.rs  poetry_package_test.rs  poetry_test.rs  pyproject_test.rs  requirements_text_test.rs  setup_py_test.rs  uv_versions_test.rs
