[package]
name = "uv-migrator"
version = "2025.1.0"
edition = "2021"
authors = ["stvnksslr@gmail.com"]
description = "Tool for converting various python package soltutions to use the uv solution by astral"
license = "MIT"
repository = "https://github.com/stvnksslr/uv-migrator"
readme = "README.md"
keywords = ["python", "uv"]

[dependencies]
clap = "4.5.20"
dirs = "5.0.1"
log = "0.4.22"
env_logger = { version = "0.11.5", features = [
    "color",
    "humantime",
    "regex",
], default-features = false }
self_update = { version = "0.41.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
which = "7.0.1"
semver = "1.0"
toml_edit = "0.22.22"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
