[package]
name = "uv-migrator"
version = "2025.3.3"
edition = "2021"
authors = ["stvnksslr@gmail.com"]
description = "Tool for converting various python package soltutions to use the uv solution by astral"
license = "MIT"
repository = "https://github.com/stvnksslr/uv-migrator"
readme = "README.md"
keywords = ["python", "uv"]

[dependencies]
clap = "4.5.23"
dirs = "5.0.1"
log = "0.4.22"
env_logger = "0.11.6"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
which = "7.0.1"
semver = "1.0.24"
toml_edit = "0.22.22"
serde_json = "1.0.134"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
