[package]
name = "uv-migrator"
version = "2025.8.0"
edition = "2024"
authors = ["stvnksslr@gmail.com"]
description = "Tool for converting various python package soltutions to use the uv solution by astral"
license = "MIT"
repository = "https://github.com/stvnksslr/uv-migrator"
readme = "README.md"
keywords = ["python", "uv"]

[dependencies]
clap = "4.5.27"
dirs = "6.0.0"
log = "0.4.22"
env_logger = "0.11.6"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
which = "7.0.1"
semver = "1.0.25"
toml_edit = "0.22.22"
serde_json = "1.0.137"
serde_yml = "0.0.12"
regex = "1.11.1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.14.0"

[features]
default = []
python = ["pyo3"]
self_update = ["dep:self_update"]

[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
