[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "uv-migrator"
version = "2025.8.0"
description = "Tool for converting various python package solutions to use the uv solution by astral"
authors = [{name = "stvnksslr", email = "stvnksslr@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["python", "uv", "migration", "packaging"]

[project.urls]
Homepage = "https://github.com/stvnksslr/uv-migrator"
Repository = "https://github.com/stvnksslr/uv-migrator"
Issues = "https://github.com/stvnksslr/uv-migrator/issues"

[tool.maturin]
features = ["python"]
module-name = "uv_migrator._uv_migrator"
python-source = "python"
include = ["python/**/*"]
exclude = ["target/**/*"]

[dependency-groups]
dev = [
    "maturin>=1.8.6",
]
